--- a/src/_7_post_method/templates/login.html
+++ b/src/_7_post_method/templates/login.html
@@ -2,10 +2,17 @@
 <html>
 <head>
 	<title>Hello page</title>
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
+	<script type="text/javascript">
+		function submit_message() {
+			alert("Form submission complete");
+		}
+	</script>
 </head>
 <body>
 <center>
-	<form method="post" action="login_success">
+	<h2>Login Form</h2>
+	<form method="post" action="login_success" onsubmit="submit_message()">
 		<input type="text" name="user_name" placeholder="User Name"/>
 		<br/><br/><br/>
 		<input type="password" name="password" placeholder="Password"/>
