--- a/src/_7_post_method/templates/success.html
+++ b/src/_7_post_method/templates/success.html
@@ -2,12 +2,22 @@
 <html>
 <head>
 	<title>Hello page</title>
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
 <center>
-	<h1>Hello!</h1>
-	<h3>Your user name is: {{ user_name }}</h3>
-	<h3>Your password is: {{ password }}</h3>
+	<h1>Your submitted form data</h1>
+	<br/>
+	<table border="2" cellpadding="20" cellspacing="5">
+		<tr>
+			<td>User Name</td>
+			<td>{{ user_name }}</td>
+		</tr>
+		<tr>
+			<td>Password</td>
+			<td>{{ password }}</td>
+		</tr>
+	</table>
 </center>
 </body>
 </html>
