--- a/src/_4_routing/templates/about.html
+++ b/src/_4_routing/templates/about.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title>About page</title>
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
 <center><h1>About Us!</h1></center>
 <hr/>
-<h2>We love to code!</h2>
+<content>
+	<h2>We are a bunch of techies who love to code!</h2>
+</content>
 </body>
 </html>
