--- a/src/_4_routing/templates/contact.html
+++ b/src/_4_routing/templates/contact.html
@@ -2,18 +2,21 @@
 <html>
 <head>
 	<title>Contact page</title>
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
 <center><h1>Contact Us!</h1></center>
 <hr/>
 <br>
-	<form>
-		<label>Name:</label><input type="text" name="name"><br/>
-		<label>Email ID:</label><input type="text" name="email"><br/>
-		<label>Phone number:</label><input type="text" name="phone" required="True"><br/>
-		<input type="submit" name="submit">
-	</form>
-</center>
-
+<div>
+	<center>
+		<form method="post" action="">
+			<input type="text" name="name" placeholder="Your Name" /><br/><br/>
+			<input type="text" name="email" placeholder="Your Email" /><br/><br/>
+			<input type="text" name="phone" placeholder="Phone Number" required="True" /><br/><br/>
+			<input type="submit" name="submit">
+		</form>
+	</center>
+</div>
 </body>
 </html>
