--- a/src/_7_post_method/templates/login.html
+++ b/src/_7_post_method/templates/login.html
@@ -13,9 +13,9 @@
 <center>
 	<h2>Login Form</h2>
 	<form method="post" action="login_success" onsubmit="submit_message()">
-		<input type="text" name="user_name" placeholder="User Name"/>
+		<input type="text" name="user_name" required placeholder="User Name"/>
 		<br/><br/><br/>
-		<input type="password" name="password" placeholder="Password"/>
+		<input type="password" name="password" required placeholder="Password"/>
 		<br/><br/><br/>
 		<input type="submit" name="submit">
 	</form>
