--- a/src/_7_post_method/templates/success.html
+++ b/src/_7_post_method/templates/success.html
@@ -10,6 +10,7 @@
 	<br/>
 	<table border="2" cellpadding="20" cellspacing="5">
 		<tr>
+			<!-- Note that Jinja web Template engine has been used here!-->
 			<td>User Name</td>
 			<td>{{ user_name }}</td>
 		</tr>
